# soten

./: .gitignore  README.md  soten.cabal  stack.yaml
models/: block_bin.stl
samples/SimpleOpenGL/: Main.hs
src/Codec/: Soten.hs
src/Codec/Soten/: BaseImporter.hs  FileImporter.hs  ImportDesc.hs  Importer.hs  MetaData.hs  PostProcess.hs  Primitive.hs  Scene.hs  Types.hs  Util.hs
src/Codec/Soten/Data/: Md2Data.hs  ObjData.hs  StlData.hs  XglData.hs
src/Codec/Soten/Format/: ObjFormat.hs  ObjImporter.hs
src/Codec/Soten/Importer/: Md2Importer.hs  ObjImporter.hs  StlImporter.hs  XglImporter.hs
src/Codec/Soten/Internal/: Anim.hs  Camera.hs  ImporterRegistry.hs  Light.hs  Material.hs  Mesh.hs  MetaData.hs  Texture.hs
src/Codec/Soten/Parser/: Md2Parser.hs  ObjFileParser.hs  ObjMtlParser.hs  ObjParser.hs  StlParser.hs  XglParser.hs
src/Codec/Soten/PostProcess/: CalcTangents.hs  ConvertToLH.hs  FindInvalidData.hs  FixInfacingNormals.hs  FlipUVs.hs  FlipWindingOrder.hs  GenFaceNormals.hs  GenNormals.hs  Triangulate.hs
src/Codec/Soten/Scene/: Anim.hs  Camera.hs  Light.hs  Material.hs  Mesh.hs  MetaData.hs  Texture.hs
src/Data/Serialize/: Int.hs
test/: Spec.hs
test/Codec/Soten/Importer/: Md2ImporterTest.hs  StlImporterTest.hs  XglImporterTest.hs
test/Codec/Soten/Parser/: Md2ParserTest.hs  ObjParserTest.hs  XglParserTest.hs
test/Codec/Soten/PostProcess/: ConvertToLHTest.hs  FixInfacingNormalsTest.hs  FlipUVsTest.hs  FlipWindingOrderTest.hs  GenFaceNormalsTest.hs  GenNormalsTest.hs  TriangulateTest.hs
viewer/: LICENSE  viewer.cabal
viewer/src/: Bound.hs  Main.hs  Util.hs
