name:                soten
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Soten
                     , Codec.Soten.BaseImporter
                     , Codec.Soten.Data.ObjData
                     , Codec.Soten.Data.StlData
                     , Codec.Soten.Data.XglData
                     , Codec.Soten.Importer
                     , Codec.Soten.Importer.ObjImporter
                     , Codec.Soten.Importer.StlImporter
                     , Codec.Soten.Importer.XglImporter
                     , Codec.Soten.Internal.ImporterRegistry
                     , Codec.Soten.Scene.Anim
                     , Codec.Soten.Scene.Camera
                     , Codec.Soten.Scene.Light
                     , Codec.Soten.Scene.Material
                     , Codec.Soten.Scene.Mesh
                     , Codec.Soten.Scene.MetaData
                     , Codec.Soten.Scene.Texture
                     , Codec.Soten.Parser.ObjFileParser
                     , Codec.Soten.Parser.ObjMtlParser
                     , Codec.Soten.Parser.StlParser
                     , Codec.Soten.Parser.XglParser
                     , Codec.Soten.PostProcess
                     , Codec.Soten.Scene
                     , Codec.Soten.Types
                     , Codec.Soten.Util
  build-depends:       base >=4.8 && <4.9
                     , bytestring
                     , cereal
                     , containers
                     , directory
                     , filepath
                     , text
                     , lens
                     , linear
                     , MissingH
                     , mtl
                     , safe
                     , unix
                     , vector
                     , hxt
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W

Test-Suite test-soten
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      base
                    , hspec
                     , bytestring
                     , cereal
                     , containers
                     , directory
                     , filepath
                     , text
                     , lens
                     , linear
                     , MissingH
                     , mtl
                     , safe
                     , unix
                     , vector
                     , hxt
  buildable:          True
  cpp-options:        -DTEST_MODE=true
  hs-source-dirs:     src test
  ghc-options:        -Wall -fno-warn-unused-do-bind -fno-warn-missing-signatures
