name:                soten
version:             0.1.0.0
synopsis:            3D models parser.
description:         3D models parser.
license:             MIT
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
category:            Codec
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Codec.Soten,
                       Codec.Soten.BaseImporter,
                       Codec.Soten.Data.ObjData,
                       Codec.Soten.Data.StlData,
                       Codec.Soten.Data.XglData,
                       Codec.Soten.Importer,
                       Codec.Soten.Importer.ObjImporter,
                       Codec.Soten.Importer.StlImporter,
                       Codec.Soten.Importer.XglImporter,
                       Codec.Soten.Internal.ImporterRegistry,
                       Codec.Soten.PostProcess.CalcTangents, 
                       Codec.Soten.PostProcess.FindInvalidData,
                       Codec.Soten.PostProcess.FixInfacingNormals,
                       Codec.Soten.PostProcess.GenNormals,
                       Codec.Soten.Scene.Anim,
                       Codec.Soten.Scene.Camera,
                       Codec.Soten.Scene.Light,
                       Codec.Soten.Scene.Material,
                       Codec.Soten.Scene.Mesh,
                       Codec.Soten.Scene.MetaData,
                       Codec.Soten.Scene.Texture,
                       Codec.Soten.Parser.ObjFileParser,
                       Codec.Soten.Parser.ObjMtlParser,
                       Codec.Soten.Parser.StlParser,
                       Codec.Soten.Parser.XglParser,
                       Codec.Soten.PostProcess,
                       Codec.Soten.Scene,
                       Codec.Soten.Types,
                       Codec.Soten.Util
  build-depends:       base >=4.8 && <4.9,
                       binary,
                       bytestring,
                       cereal,
                       containers,
                       directory,
                       filepath,
                       text,
                       lens,
                       linear >= 1.19.1.3,
                       MissingH,
                       mtl,
                       safe,
                       unix,
                       vector,
                       hxt,
                       zlib
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -W

Test-Suite test-soten
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  build-depends:      base,
                      hspec,
                      binary,
                      bytestring,
                      cereal,
                      containers,
                      directory,
                      filepath,
                      text,
                      lens,
                      linear,
                      MissingH,
                      mtl,
                      safe,
                      unix,
                      vector,
                      hxt,
                      zlib
  buildable:          True
  cpp-options:        -DTEST_MODE=true
  hs-source-dirs:     src test
  default-language:    Haskell2010
  ghc-options:         -W

executable SimpleOpenGL
  main-is:             Main.hs 
  build-depends:       base >=4.6 && <4.9,
                       GLUT,
                       OpenGL,
                       soten,
                       vector
  hs-source-dirs:      samples/SimpleOpenGL
  default-language:    Haskell2010
  ghc-options:         -W

 
source-repository head
  type:     git
  location: http://github.com/triplepointfive/soten
