name:                viewer
version:             0.1.0.0
synopsis:            3D model viewer
description:         3D model viewer based on soten library.
license:             MIT
license-file:        LICENSE
author:              Ilya Smelkov
maintainer:          triplepointfive@gmail.com
-- copyright:
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable viewer
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       gtk,
                       soten,
                       gtkglext,
                       OpenGL,
                       vector
  hs-source-dirs:      src
  default-language:    Haskell2010
